# Rover

./: .gitignore  README.md  package.json  vite.config.ts
desktop/: Cargo.toml
desktop/portal/: org.freedesktop.impl.portal.desktop.rover.service  rover.portal
desktop/src/: chooser.rs  drives.rs  file_actions.rs  file_manager_bus.rs  fs_ops.rs  lib.rs  main.rs  operations_queue.rs  path_codec.rs  portal_backend.rs  settings.rs  system_status.rs  trash_manager.rs
desktop/src/platform/linux/: background_effect.rs
desktop/src/vcs/: git.rs  mod.rs  pig.rs
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: drives.rs  file_actions.rs  fs_ops.rs  lib.rs  main.rs  operations_queue.rs  settings.rs  system_status.rs  trash_manager.rs
src-tauri/src/platform/linux/: background_effect.rs  mod.rs
src/lib/: api.ts  runtime.ts
src/lib/components/: Icon.svelte  Portal.svelte
src/lib/components/file-manager/: AppHeader.svelte  ChooserBar.svelte  ContextMenu.svelte  EntryIcon.svelte  FilePane.svelte  InlineNameField.svelte  NameDialog.svelte  OperationDock.svelte  PathToolbar.svelte  Sidebar.svelte  StatusBar.svelte  TrashPane.svelte  VcsBadge.svelte  VcsPanel.svelte  VcsSaveDialog.svelte
src/lib/file-manager/: bookmarks.ts  drag-drop.ts  entries.ts  manager.svelte.ts  marquee.ts  preview.ts  shortcuts.ts  thumbnails.ts  view-modes.ts
src/lib/stores/: index.ts
src/lib/types/: index.ts
src/lib/utils/: index.ts
src/lib/vcs/: format.ts  provider.ts  state.svelte.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
