[package]
name = "rover"
version = "0.1.0"
description = "A modern file manager for Linux"
authors = ["Kristof"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "rover_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-log = "2.8.0"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"

# File operations
tokio = { version = "1", features = ["full"] }
walkdir = "2.5"
trash = "5"
notify = "8"
dirs = "6"
mime_guess = "2"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
thiserror = "2"

open = "5"
libc = "0.2"

# Linux specific
[target.'cfg(target_os = "linux")'.dependencies]
freedesktop_entry_parser = "2"
gdkwayland-sys = "0.18.2"
gtk = "0.18.2"
wayland-client = { version = "0.31.14", features = ["system"] }
wayland-protocols = { version = "0.32.12", features = ["client", "staging"] }
webkit2gtk = "2.0.2"
webkit2gtk-nvidia-quirk = "1.3.0"
